# PPOIS

./: .gitignore  CMakeLists.txt  build_coverage_script.bat
Google_tests/: BankTransferTest.cpp  CMakeLists.txt  CustomerTest.cpp  EmployeeTest.cpp  InStoreCustomerTest.cpp  LoyaltyProgramTest.cpp  ManagerTest.cpp  PersonTest.cpp
book_manager/: app.py
book_manager/controllers/: main_controller.py
book_manager/models/: book.py  book_database.py
book_manager/views/: main_window.py
book_manager/views/dialogs/: add_book_dialog.py  delete_book_dialog.py  search_book_dialog.py
garden/: .gitignore  garden_state.json  main.py
garden/models/: fertilizer.py  garden.py  plant.py  seed.py  soil.py  tool.py  watering.py
garden/services/: gardener.py  storage.py
garden/tests/: tests_models.py  tests_services.py
lab3/: CMakeLists.txt  main.cpp
lab3/Google_tests/: Address_TEST.cpp  Attendance_TEST.cpp  BankAccount_TEST.cpp  CMakeLists.txt  Company_TEST.cpp  ContactInfo_TEST.cpp  Department_TEST.cpp  Employee_TEST.cpp  LoginSystem_TEST.cpp  Payment_TEST.cpp  PayrollSystem_TEST.cpp  ProjectManager_TEST.cpp  Project_TEST.cpp  Report_TEST.cpp  Role_TEST.cpp  Task_TEST.cpp  TimeSheet_TEST.cpp
lab3/salary_lib/: Address.cpp  Address.h  Attendance.cpp  Attendance.h  BankAccount.cpp  BankAccount.h  CMakeLists.txt  Company.cpp  Company.h  ContactInfo.cpp  ContactInfo.h  Department.cpp  Department.h  Employee.cpp  Employee.h  LoginSystem.cpp  LoginSystem.h  Manager.cpp  Manager.h  Payment.cpp  Payment.h  PayrollSystem.cpp  PayrollSystem.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  Report.cpp  Report.h  Role.cpp  Role.h  Task.cpp  Task.h  TimeSheet.cpp  TimeSheet.h
lab4/: Graph_TESTS.cpp  main.cpp
lab4/Graph/: AdjacentVertexIterators.tpp  Exceptions.hpp  Graph.hpp  Graph.tpp  VertexIterators.tpp
pizzeria_lib/: BankTransferPayment.h  CashPayment.cpp  Chef.cpp  CreditCardPayment.cpp  Customer.h  Employee.cpp  InStoreCustomer.cpp  InStoreCustomer.h  Manager.h  Order.cpp  Payment.h  Person.cpp  Person.h  Pizza.cpp
pizzeria_v2/: .gitignore  build_script.bat  main.cpp  test.bat
pizzeria_v2/Google_tests/: CashPaymentTest.cpp  ChefTest.cpp  CreditCardPaymentTest.cpp  DelivertPersonTest.cpp  OnlineCustomerTest.cpp  OrderTest.cpp  PaymentTest.cpp  PizzaTest.cpp
pizzeria_v2/pizzeria_lib/: BankTransferPayment.cpp  CMakeLists.txt  CashPayment.h  Chef.h  CreditCardPayment.h  Customer.cpp  DeliveryPerson.cpp  DeliveryPerson.h  Employee.h  LoyaltyProgram.cpp  LoyaltyProgram.h  Manager.cpp  OnlineCustomer.cpp  OnlineCustomer.h  Order.h  Payment.cpp  Pizza.h
texas_poker_app/: .env  .gitignore  poker_users.db  requirements.txt
texas_poker_app/backend/: main.py  requirements.txt
texas_poker_app/backend/models/: card.py  database.py  deck.py  game.py  player.py  user.py
texas_poker_app/backend/routes/: auth.py  game.py
texas_poker_app/frontend/static/css/: style.css
texas_poker_app/frontend/static/js/: main.js
texas_poker_app/frontend/templates/: index.html
texas_poker_app/tests/: test_poker_game.py
